float rfp review page

--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,125 +1,93 @@
 <form *ngIf="finalRfq" [formGroup]="form" (ngSubmit)="submit()">
-  <div class="page-start-point mt-5 p-rem-t-15">
-    <div class="min-height parent" [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5 p-rem-r-5' : 'p-l-20 p-r-20 p-b-20'">
-      <div class="row m-b-10">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-xs-12 p-t-10" [ngClass]="isMobile ? 'sm-btn1' : ''">
-              <button mat-raised-button class="main-background-color main-button color-white pull-right float-rfq-btn" [disabled]="!form.valid">Float RFP</button>
-              <span (click)="selectCurrency()" class="text-decoration-underline main-color pull-right font-size-vary-grn p-t-10 p-r-10 text-semi-bold cursor-pointer"
-                >Select Currency</span
-              >
-            </div>
-          </div>
-          <!-- first row -->
-          <div class="row m-b-10" [ngClass]="isMobile ? 'm-podr4' : ''">
-            <div class="col-md-3 col-xs-7 m-itm">
-              <mat-form-field class="border-input" [ngClass]="isMobile ? 'd-block' : ''">
-                <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="RFP Name*" />
-              </mat-form-field>
-            </div>
-            <!-- <div class="col-md-4">
-              <mat-form-field class="border-input date-label">
-                <mat-label>RFQ End Date</mat-label>
-                <span class="form-placeholder">{{ form["controls"]["dueDate"].value | date: "dd-MMM-yyy" }}</span>
-                <input matInput [matDatepicker]="dueDate" formControlName="dueDate" (click)="dueDate.open()" readonly />
-                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
-                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
-              </mat-form-field>
-            </div> -->
-            <div class="col-md-6 col-xs-5 date-dialog-add-edit p-t-5 m-itm">
-              <!-- end date -->
-              <mat-form-field class="border-input" [ngClass]="isMobile ? 'd-block' : ''">
-                <mat-label>RFP End Date*</mat-label>
-                <!-- <span class="form-placeholder">{{ form["controls"]["dueDate"].value | date: "dd-MMM-yyy" }}</span> -->
-                <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate" (click)="endDate.open()" readonly />
-                <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
-                <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
-                <!-- <small *ngIf="sameStartEndDate" class="error-msg"> End Date must be greater than Start Date </small> -->
-              </mat-form-field>
-            </div>
-            <!-- <div class="col-md-2 p-t-20 main-color">
-                <button mat-button class="pull-right" (click)="openDialog1()">
-                  Comment
-                </button>
-              </div>
-              <div class="col-md-3 p-t-20 main-color">
-                <button mat-button class="pull-right" (click)="openDialog2()">
-                  View Terms & Conditions/Documents
-                </button>
-              </div> -->
+  <div class="page-start-point rfp-review-style">
+    <div class="min-height parent" [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5 p-rem-r-5' : 'p-l-5 p-r-15 p-b-20'">
 
-            <div
-              class="col-md-3 col-xs-12 p-l-0 p-t-20 text-right m-itm"
-              *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null"
-              [ngClass]="isMobile ? 'p-b-10' : 'p-b-20'"
-            >
-              <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
-                <span class="font-size-vary-grn color-grey">
-                  <img width="25px" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyFlag" [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag" />
-                  {{ finalRfq.rfqCurrency.exchangeCurrencyName }}
-                </span>
-                <span class="p-l-5"> = </span>
-                <span class="p-l-5 color-6d6a6a color-grey"> {{ finalRfq.rfqCurrency.exchangeValue }} </span>
-                <span class="p-l-5 color-grey">
-                  <img width="25px" *ngIf="finalRfq.rfqCurrency.primaryCurrencyFlag" [src]="finalRfq.rfqCurrency.primaryCurrencyFlag" />
-                  {{ finalRfq.rfqCurrency.primaryCurrencyName }}
-                </span>
+      <div class="row" [ngClass]="isMobile ? 'p-t-0' : 'p-t-10'">
+        <div class="col-md-12 display-flex align-center justify-content-flex-end" [ngClass]="isMobile ? 'sm-btn1' : ''">
+          <span (click)="selectCurrency()"
+            class="text-decoration-underline main-color pull-right font-size-vary-grn p-t-10 p-r-10 text-semi-bold cursor-pointer">Select
+            Currency</span>
+          <button mat-raised-button class="main-background-color main-button color-white pull-right float-rfq-btn"
+            [disabled]="!form.valid">Float RFP</button>
+        </div>
+      </div>
+
+      <!-- first row -->
+      <div class="row align-center m-b-10" [ngClass]="isMobile ? 'm-podr4' : ''">
+        <div class="col-md-3 col-sm-4 col-xs-6 m-itm rfp-name-input">
+          <mat-form-field class="border-input width-100" [ngClass]="isMobile ? 'd-block' : ''">
+            <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="RFP Name*" />
+          </mat-form-field>
+        </div>
+
+        <!-- end date -->
+        <div class="col-md-3 col-sm-4 col-xs-6 rfp-end-date-input">
+          <mat-form-field class="border-input width-100" [ngClass]="isMobile ? 'd-block' : ''">
+            <mat-label>RFP End Date*</mat-label>
+            <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate" (click)="endDate.open()"
+              readonly />
+            <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
+            <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <div class="col-md-6 col-sm-4 col-xs-12 text-right base-currency-selector"
+          *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null">
+          <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+            <span class="font-size-vary-grn color-grey">
+              <img width="25px" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyFlag"
+                [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag" />
+              {{ finalRfq.rfqCurrency.exchangeCurrencyName }}
+            </span>
+            <span class="p-l-5"> = </span>
+            <span class="p-l-5 color-6d6a6a color-grey"> {{ finalRfq.rfqCurrency.exchangeValue }} </span>
+            <span class="p-l-5 color-grey">
+              <img width="25px" *ngIf="finalRfq.rfqCurrency.primaryCurrencyFlag"
+                [src]="finalRfq.rfqCurrency.primaryCurrencyFlag" />
+              {{ finalRfq.rfqCurrency.primaryCurrencyName }}
+            </span>
+          </span>
+
+          <div class="display-inline-block p-l-5">
+            <span *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null" class="info-icon info-tootip">
+              <img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+              <span class="info-tootip__content rt-0">
+                <div class="tooltip-table ml-0">
+                  <div class="row text-center color-grey text-semi-bold">Supplier will have to submit the quote in this
+                    selected currency</div>
+                </div>
               </span>
-              <div class="display-inline-block p-l-5">
-                <span *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null" class="info-icon info-tootip"
-                  ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
-                  <span class="info-tootip__content rt-0">
-                    <div class="tooltip-table ml-0">
-                      <div class="row text-center color-grey text-semi-bold">Supplier will have to submit the quote in this selected currency</div>
-                    </div>
-                  </span>
-                </span>
-              </div>
-            </div>
-
-            <!-- <div class="col-xs-3 select-currency p-t-10 p-b-10" *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName">
-              <div class="base-currency">
-                <span class="text-semi-bold font-size-vary-grn color-6d6a6a">
-                  <img width="25px" [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag" />
-                  {{ finalRfq.rfqCurrency.exchangeCurrencyName }}
-                </span>
-                <span class="p-l-5"> = </span>
-                <span class="p-l-5"> {{ finalRfq.rfqCurrency.exchangeValue }} </span>
-                <span class="p-l-5">
-                  <img width="25px" [src]="finalRfq.rfqCurrency.primaryCurrencyFlag" />
-                  {{ finalRfq.rfqCurrency.primaryCurrencyName }}
-                </span>
-              </div>
-            </div> -->
-          </div>
-          <!-- second row -->
-          <div class="row main-flex" [ngClass]="!isMobile ? 'm-b-10' : ''">
-            <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList" [ngClass]="isMobile ? 'mb-3 p-l-0 p-r-0' : ''">
-              <mat-card class="w-100">
-                <div class="col-md-12 text-bold">
-                  <label for="company" class="mb-0">{{ supplier.supplierName }}</label>
-                </div>
-                <view-rating [supplierId]="supplier.supplierId" [ratings]="supplier.supplierRating"></view-rating>
-                <div class="col-md-12">
-                  <label for="email" class="m-b-2">{{ supplier.email }}</label>
-                </div>
-                <div class="col-md-12">
-                  <label for="phoneNumber">{{ supplier.contactNo }}</label>
-                </div>
-              </mat-card>
-            </div>
+            </span>
           </div>
         </div>
       </div>
-      <mat-card class="m-b-10 p-b-10" *ngIf="this.finalRfq.terms"
-        >Payment Terms:
+
+      <!-- suppliers list row -->
+      <div class="row supplier-list-row">
+        <div class="col-md-3 col-xs-12" *ngFor="let supplier of selectedSuppliersList">
+          <mat-card class="w-100 rfp-supplier m-b-15">
+
+            <span class="supplier-company-name">{{ supplier.supplierName }}</span>
+            
+            <span class="d-block supplier-rates">
+              <view-rating [supplierId]="supplier.supplierId" [ratings]="supplier.supplierRating"></view-rating>
+            </span>
+  
+            <span class="word-break-all">{{ supplier.email }}</span>
+            
+            <span class="word-break-all rfp-supplier-contact">{{ supplier.contactNo }}</span>
+          </mat-card>
+        </div>
+      </div>
+
+      <mat-card class="m-b-10 p-b-10" *ngIf="this.finalRfq.terms">
+        <span style="font-weight: 500;">Payment Terms:</span>
         <span classs="p-l-15">
           {{ this.finalRfq.terms.termsDesc.trim() === "Others" ? this.finalRfq.terms.otherDesc : this.finalRfq.terms.termsDesc }}
         </span>
       </mat-card>
 
-      <mat-accordion>
+      <mat-accordion class="float-rfp-review">
         <ng-template ngFor let-project [ngForOf]="checkedList" let-i="index">
           <mat-expansion-panel class="myPanel" [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
             <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-15 p-rem-t-15' : ''">
@@ -171,16 +139,21 @@
 
                 <!-- View image modal link -->
                 <ng-container matColumnDef="Attached Images">
-                  <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">Attached Images</th>
-                  <td class="text-align-center" mat-cell *matCellDef="let element">
-                    <div *ngIf="element?.documentList?.length" class="images-lists float-rfq-img-stack" (click)="viewAllImages(element.materialId)">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
+                    Attached Images</th>
+                  <td class="text-align-center rfq-view-image-lists" mat-cell *matCellDef="let element">
+                    <div *ngIf="element?.documentList?.length" class="images-lists"
+                      (click)="viewAllImages(element.materialId)"
+                      [ngClass]="element?.documentList?.length === 1 ? 'single-image' : element?.documentList?.length === 2 ? 'double-images' : 'triple-images'">
                       <ng-container *ngFor="let img of element.documentList; let i = index">
-                        <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
+                        <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image"
+                          *ngIf="i < 3" />
                       </ng-container>
                     </div>
 
                     <ng-container *ngIf="!element?.documentList">
-                      <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+                      <img src="assets/images/project-default-image.png" alt="default-material"
+                        class="img-fluid default-image" />
                     </ng-container>
                   </td>
                 </ng-container>
