--- a/src/assets/scss/pages/report.scss
+++ b/src/assets/scss/pages/report.scss
@@ -6,6 +6,10 @@
     width: 100%;
   }
 
+  .mat-header-cell, .mat-cell{
+    border-bottom: none !important;
+  }
+
   .mat-row, .mat-header-row, .liability-row, .ctc-row {
     display: flex;
     align-items: center;
