--- a/src/app/shared/dialogs/add-address/add-address.component.html
+++ b/src/app/shared/dialogs/add-address/add-address.component.html
@@ -46,120 +46,118 @@
         </mat-tab>
 
         <mat-tab label="{{ tab2Label }}">
-          <form [formGroup]="newAddressForm">
-            <div class="add-address-dialog-div-main p-rem-t-10">
-              <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                  <div class="row border-input">
-                    <mat-form-field class="col-xs-12">
-                      <input matInput type="text" placeholder="Address Line 1" formControlName="addressLine1" />
-                    </mat-form-field>
-                    <small *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
-                      Address Line1 is required
-                    </small>
-                    <small *ngIf="newAddressForm.controls['addressLine1'].value.length > 120 && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
-                      Address should be less than 120 characters
-                    </small>
-                  </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6">
-                  <div class="row border-input p-t-0">
-                    <mat-form-field class="col-xs-12">
-                      <input matInput type="text" placeholder="Address Line 2" formControlName="addressLine2" />
-                      <small *ngIf="newAddressForm.controls['addressLine2'].value.length > 120 && newAddressForm.controls['addressLine2'].touched" class="form-error-msg p-l-15">
+          <div *ngIf="true">
+            <form [formGroup]="newAddressForm">
+              <div class="add-address-dialog-div-main p-rem-t-10">
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="row border-input">
+                      <mat-form-field class="col-xs-12">
+                        <input matInput type="text" placeholder="Address Line 1" formControlName="addressLine1" />
+                      </mat-form-field>
+                      <small *ngIf="newAddressForm.controls['addressLine1'].hasError('required') && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
+                        Address Line1 is required
+                      </small>
+                      <small *ngIf="newAddressForm.controls['addressLine1'].value.length > 120 && newAddressForm.controls['addressLine1'].touched" class="form-error-msg p-l-15">
                         Address should be less than 120 characters
                       </small>
+                    </div>
+                  </div>
+
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="row border-input p-t-0">
+                      <mat-form-field class="col-xs-12">
+                        <input matInput type="text" placeholder="Address Line 2" formControlName="addressLine2" />
+                        <small *ngIf="newAddressForm.controls['addressLine2'].value.length > 120 && newAddressForm.controls['addressLine2'].touched" class="form-error-msg p-l-15">
+                          Address should be less than 120 characters
+                        </small>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-6 p-t-6">
+                    <mat-form-field class="border-select address-select-country mat-form-field-infix-padding-top mat-form-field-flex-mm-padding mt6p width-100">
+                      <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
+                        <div class="display-flex">
+                          <input
+                            class="p-l-10 p-b-5"
+                            matInput
+                            type="search"
+                            placeholder="Search Country"
+                            [(ngModel)]="searchCountry"
+                            [ngModelOptions]="{standalone: true}"
+                            (keydown)="$event.stopPropagation()"
+                          />
+                          <button mat-button matSuffix mat-icon-button>
+                            <mat-icon>search</mat-icon>
+                          </button>
+                        </div>
+
+                        <mat-select-trigger>
+                          <span class="d-flex selected-country" matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}">
+                            <img class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                            <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
+                          </span>
+                        </mat-select-trigger>
+
+                        <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country" selected="trade.isAttatched"
+                          ><span
+                            ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
+                            <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
+                            <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                          </span>
+                        </mat-option>
+                      </mat-select>
                     </mat-form-field>
+                  </div>
+
+                  <div class="col-xs-6">
+                    <div class="row border-input p-t-0">
+                      <mat-form-field class="col-xs-12">
+                        <input matInput type="string" placeholder="Pincode" formControlName="pinCode" />
+                      </mat-form-field>
+                      <ng-container *ngIf="newAddressForm.controls['pinCode'].touched">
+                        <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && pincodeLength <= 0" class="form-error-msg p-l-15"> Pincode is required </small>
+                        <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg p-l-15"> Enter Valid Pincode </small>
+                      </ng-container>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <div class="row border-input p-t-0">
+                      <mat-form-field class="col-xs-12">
+                        <input matInput type="string" formControlName="state" placeholder="State" />
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div class="col-xs-6">
+                    <div class="row border-input p-t-0">
+                      <mat-form-field class="col-xs-12">
+                        <input matInput type="string" formControlName="city" placeholder="City" />
+                      </mat-form-field>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="row border-input p-t-0">
+                      <mat-form-field class="col-xs-12"> <input matInput type="text" [placeholder]="this.countryCode === 'IN' ? 'GSTIN*' : 'Tax Code'" formControlName="gstNo" /> </mat-form-field>
+                      <small *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15"> GSTIN is required </small>
+                      <small *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15"> Enter Valid GSTIN</small>
+                    </div>
                   </div>
                 </div>
               </div>
-
-              <div class="row">
-                <div class="col-xs-6 p-t-6">
-                  <!-- country -->
-                  <mat-form-field class="border-select address-select-country mat-form-field-infix-padding-top mat-form-field-flex-mm-padding mt6p width-100">
-                    <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
-                      <div class="display-flex">
-                        <input
-                          class="p-l-10 p-b-5"
-                          matInput
-                          type="search"
-                          placeholder="Search Country"
-                          [(ngModel)]="searchCountry"
-                          [ngModelOptions]="{standalone: true}"
-                          (keydown)="$event.stopPropagation()"
-                        />
-                        <button mat-button matSuffix mat-icon-button>
-                          <mat-icon>search</mat-icon>
-                        </button>
-                      </div>
-
-                      <mat-select-trigger>
-                        <span class="d-flex selected-country" matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}">
-                          <img class="width-27-px p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                          <span class="p-r-5 color-brand font-size16">{{ selectedCountry && selectedCountry.name }}</span>
-                        </span>
-                      </mat-select-trigger>
-
-                      <mat-option *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']" [value]="country" selected="trade.isAttatched"
-                        ><span
-                          ><img class="width17Percent p-r-10" [src]="country.imageUrl" alt="" />
-                          <span matTooltip="{{ country.name }}" class="limited-character universal p-r-5">{{ country.name }}</span>
-                          <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
-                        </span>
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-
-                <div class="col-xs-6">
-                  <div class="row border-input p-t-0">
-                    <mat-form-field class="col-xs-12">
-                      <input matInput type="string" placeholder="Pincode" formControlName="pinCode" />
-                    </mat-form-field>
-                    <ng-container *ngIf="newAddressForm.controls['pinCode'].touched">
-                      <small *ngIf="newAddressForm.controls['pinCode'].hasError('required') && pincodeLength <= 0" class="form-error-msg p-l-15"> Pincode is required </small>
-                      <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
-                                        class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
-                      <small *ngIf="!validPincode && pincodeLength > 0" class="error-msg p-l-15"> Enter Valid Pincode </small>
-                    </ng-container>
-                  </div>
-                </div>
+              <div class="col-xs-12 text-center p-t-10">
+                <button mat-raised-button [disabled]="!newAddressForm.valid || !validPincode" class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onAddAddress()">
+                  {{ tab2Label === "Add Address" ? "Add" : "Edit" }}
+                </button>
               </div>
-              <div class="row">
-                <div class="col-xs-6">
-                  <div class="row border-input p-t-0">
-                    <mat-form-field class="col-xs-12">
-                      <input matInput type="string" formControlName="state" placeholder="State" />
-                      <!-- <input matInput type="text" placeholder="State" formControlName="state" /> -->
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class="col-xs-6">
-                  <div class="row border-input p-t-0">
-                    <mat-form-field class="col-xs-12">
-                      <input matInput type="string" formControlName="city" placeholder="City" />
-                    </mat-form-field>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                  <div class="row border-input p-t-0">
-                    <mat-form-field class="col-xs-12"> <input matInput type="text" placeholder="{{ this.countryCode === "IN" ? "GSTIN:" : "Tax Code:" }}" formControlName="gstNo" /> </mat-form-field>
-                    <small *ngIf="newAddressForm.controls['gstNo'].hasError('required') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15"> GSTIN is required </small>
-                    <small *ngIf="newAddressForm.controls['gstNo'].hasError('pattern') && newAddressForm.controls['gstNo'].touched" class="form-error-msg p-l-15"> Enter Valid GSTIN</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-12 text-center p-t-10">
-              <button mat-raised-button [disabled]="!newAddressForm.valid || !validPincode" class="main-background-color main-button color-white m-b-5" cdkFocusInitial (click)="onAddAddress()">
-                {{ tab2Label === "Add Address" ? "Add" : "Edit" }}
-              </button>
-            </div>
-          </form>
+            </form>
+          </div>
         </mat-tab>
       </mat-tab-group>
     </div>
