--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -55,9 +55,10 @@
     </div>
     <div class="main-div-po-outer">
       <div class="main-div-po m-b-45">
-        <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData"> </app-po-card>
+        <app-po-card #poCard *ngIf="tableData && tableData.length" [cardData]="cardData"> </app-po-card>
       </div>
-      <app-po-table #poTable *ngIf="tableData.length" [poTableData]="tableData" [purchaseOrderCurrency]="currency" [additionalOtherCostInfo]="additionalOtherCost" [poData]="poData"> </app-po-table>
+      <app-po-table #poTable *ngIf="tableData && tableData.length" [poTableData]="tableData" [purchaseOrderCurrency]="currency" [additionalOtherCostInfo]="additionalOtherCost" [poData]="poData">
+      </app-po-table>
     </div>
 
     <div class="row mt-3">
