--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -5,6 +5,10 @@
     background-color: #ffffff !important;
   }
 
+  .rfp-bids-tbl .mat-header-cell, .rfp-bids-tbl .mat-cell{
+    border-bottom: none;
+  }
+
   .mat-table {
     display: block;
   }
