--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -79,4 +79,9 @@
       </table>
     </div>
   </mat-accordion>
+
+  <ng-container *ngIf="paginationConfig">
+    <app-paginator class="pagi-st" [config]="paginationConfig" (updatePaginator)="updatePaginatorOptions($event)">
+    </app-paginator>
+  </ng-container>
 </ng-container>
