--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -97,9 +97,7 @@
                     </mat-form-field>
                     <mat-error *ngIf="userInfoForm.controls['contactNo'].errors && (userInfoForm.controls['contactNo'].dirty || userInfoForm.controls['contactNo'].touched)">
                       <mat-error *ngIf="userInfoForm.controls['contactNo'].hasError('required')"> Phone number is required </mat-error>
-                      <mat-error *ngIf="userInfoForm.controls['contactNo'].hasError('pattern') && userInfoForm.controls['contactNo'].touched">
-                        Phone number must be valid
-                      </mat-error>
+                      <mat-error *ngIf="userInfoForm.controls['contactNo'].hasError('pattern') && userInfoForm.controls['contactNo'].touched"> Phone number must be valid </mat-error>
                     </mat-error>
                   </div>
                 </div>
@@ -137,8 +135,8 @@
                 <mat-error *ngIf="userInfoForm.controls['turnOverId'].errors && (userInfoForm.controls['turnOverId'].dirty || userInfoForm.controls['turnOverId'].touched)">
                   <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')">Annual Turn over is required</mat-error>
                 </mat-error>
-                <div class="row height-12 m-t-10 border-round width-70 p-t-5 full-border-main">
-                  <div class="col-xs-6 p-t-10 color-grey text-semi-bold p-r-0 fontsize-15-px">Base Currency</div>
+                <div class="row height-12 display-flex align-center m-t-10 border-round width-70 p-t-5 full-border-main">
+                  <div class="col-xs-6 color-grey text-semi-bold p-r-0 fontsize-15-px">Base Currency</div>
                   <div class="col-xs-6 p-l-0">
                     <mat-form-field class="width-90 border-select mat-form-field-infix-padding dropdown-padding mat-form-field-flex-mm-padding">
                       <mat-select formControlName="baseCurrency">
