--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -5,7 +5,7 @@
     background-color: #ffffff !important;
   }
 
-  .rfp-bids-tbl .mat-header-cell, .rfp-bids-tbl .mat-cell{
+  .mat-header-cell, .mat-cell{
     border-bottom: none;
   }
 
