--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -54,8 +54,8 @@
                   <tr matSort class="mat-header-row">
                     <th class="mat-header-cell maxwidth-20">Material Name</th>
                     <th class="mat-header-cell maxwidth-10">Quantity</th>
+                    <th class="mat-header-cell maxwidth-10">Attached Images</th>
                     <th class="mat-header-cell maxwidth-60">Makes & Rates</th>
-                    <th class="mat-header-cell maxwidth-10"></th>
                   </tr>
                 </table>
 
@@ -70,18 +70,18 @@
                         <span class="p-l-5">{{ material.materialUnit }}</span>
                       </td>
 
+                      <td class="mat-cell maxwidth-10 text-center"></td>
+
                       <td class="mat-cell maxwidth-60">
                         <tr class="mat-row makes-details-row">
                           <ng-container *ngFor="let brand of material.brandNames">
                             <td class="mat-cell maxwidth-10 text-center">{{ brand }}</td>
                             <td class="mat-cell maxwidth-15 text-center supplier-rate-col-bid">Supplier Rates
-                              <span *ngIf="this.rfqProjects[0].rfqCurrency" class="p-r-5">({{ currency }})</span>
+                              <span *ngIf="rfqProjects[0].rfqCurrency" class="p-r-5">({{ currency }})</span>
                             </td>
                           </ng-container>
                         </tr>
                       </td>
-
-                      <td class="mat-cell maxwidth-10 text-center">Attached Images</td>
                     </tr>
 
                     <ng-container formArrayName="supplierList">
@@ -95,6 +95,25 @@
                         </td>
 
                         <td class="mat-cell maxwidth-10"></td>
+
+                        <!-- Attached Image Column individual Supplier -->
+                        <td class="mat-cell maxwidth-10 view-bid-images-preview text-center">
+                          <ng-container *ngIf="supplier?.documentList?.length; else defaultImage">
+                            <div
+                              class="images-lists"
+                              [ngClass]="supplier.documentList.length === 1 ? 'single-image' : supplier.documentList.length === 2 ? 'double-images' : 'triple-images'"
+                              (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)"
+                            >
+                              <ng-container *ngFor="let img of supplier.documentList; let i = index">
+                                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
+                              </ng-container>
+                            </div>
+                          </ng-container>
+
+                          <ng-template #defaultImage>
+                            <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+                          </ng-template>
+                        </td>
 
                         <td class="mat-cell maxwidth-60">
                           <tr class="mat-row">
@@ -125,26 +144,7 @@
                               </ng-container>
                             </ng-container>
                           </tr>
-                        </td>
-
-                        <!-- Attached Image Column individual Supplier -->
-                        <td class="mat-cell maxwidth-10 view-bid-images-preview text-center">
-                          <ng-container *ngIf="supplier?.documentList?.length; else defaultImage">
-                            <div
-                              class="images-lists"
-                              [ngClass]="supplier.documentList.length === 1 ? 'single-image' : supplier.documentList.length === 2 ? 'double-images' : 'triple-images'"
-                              (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)"
-                            >
-                              <ng-container *ngFor="let img of supplier.documentList; let i = index">
-                                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
-                              </ng-container>
-                            </div>
-                          </ng-container>
-
-                          <ng-template #defaultImage>
-                            <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
-                          </ng-template>
-                        </td>
+                        </td>                        
                       </tr>
 
                     </ng-container>
