--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -886,3 +886,9 @@ th, td{
     margin-top: -20px;
   }
 }
+
+.sel-mat-blk{
+  font-weight: 500;
+    border-radius: 5px;
+    background-color: #eff1f5;
+}
