--- a/src/app/features/dashboard/bom/bom-edit-material/bom-edit-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-edit-material/bom-edit-materials.component.html
@@ -32,12 +32,14 @@
                 </div>
               </td>
               <td>
-                <app-search-unit [config]="{
-                                    isDisable: getIsDisableSearchUnit(item.value.requestedQuantity, item.value.issueToProject, item.value.availableStock),
-                                    materialUnits: materialUnits,
-                                    item: item,
-                                    selectedUnit: item.value.materialUnit
-                                }" (getSelectedUnit)="item.value.materialUnit = $event"></app-search-unit>
+                <ng-container *ngIf="materialUnits?.length">
+                  <app-search-unit [config]="{
+                      isDisable: getIsDisableSearchUnit(item.value.requestedQuantity, item.value.issueToProject, item.value.availableStock),
+                      materialUnits: materialUnits,
+                      item: item,
+                      selectedUnit: item.value.materialUnit
+                    }" (getSelectedUnit)="item.value.materialUnit = $event"></app-search-unit>
+                </ng-container>
               </td>
               <td>
                 <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
@@ -64,12 +66,5 @@
       </div>
 
     </ng-container>
-
-    <div class="row align-items-center copy-bom-small-screen">
-      <div class="col-xs-12 col-md-12 text-right copy-bom-button-action">
-        <button mat-raised-button class="main-background-color main-button color-white" (click)="update()"
-          [disabled]="!form.valid">Update</button>
-      </div>
-    </div>
 
   </div>
